# incubator

./: README.md  updateReadme.php  update_readme
2020/general/backup_strategy/: README.md
2020/general/execute_php_unit_test_pre_branch/: README.md
2020/general/git/: README.md
2020/general/vcf_to_csv_converter/: converter  (+1 more)
2022/etc_git/: README.md
2022/systemd_rsync/: README.md  backup.sh  configuration.sh.dist  net_bazzline_-_rsync.timer
2025/event_sourcing_example/: README.md  compose.yml  main.py  pyproject.toml
cli/alternativlos/: README.md  download.sh
cli/install/: phpstorm.php
cli/progressBar/: idea.md
device/babyphone/: README.md
general/backup_strategy/: README.md
general/crontab_manager/: README.md  crontab_manager.php
general/deployment_to_do/: README.md
general/docker_compose/: README.md
general/fileManager/: README.md  tagCloud.md
general/git/: search_and_merge_branch_into_repository
general/microFramework/: README.md
general/pdf_ocr/: script.sh
general/phpmbtest/: README.md
general/release_creation_helper/: README.md  composer.json
general/send_mail_via_command_line/: README.md  composer.json
general/serendipity_upgrade_skript/: README.md  serendipity_upgrade.sh
general/testManagement/: idea.md
general/timeManager/: README.md  idea.md
general/time_based_batch_limiter/: README.md
general/translationDatabase/: README.md
general/uberspace_lets_encrypt/: cronjob.sh
general/unique_number_repository/: README.md  composer.json
general/vcf_to_csv_converter/: README.md
general/vcs_to_csv_converter/: README.md
(+860 files in other folders)
